2003-08-05 [christoph]

	* src/Makefile.am
	* src/plugin.c
	* src/viewer.c
	* src/viewerprefs.c
	* src/libgtkgs/Makefile.am
	* src/libgtkgs/ggvutils.c
	* src/libgtkgs/gtkgs.c
		used installed header files and sylpheed's pkg-config file
		to build the plugin

2003-07-07 [christoph]

	* src/libgtkgs/gtkgs.c
		apply patch for Ghostscript 8 by
		Charles Philip Chan <cpchan@sympatico.ca>

2003-06-09 [christoph]

	* .cvsignore
	* Makefile.am
	* configure.ac
	* config/.cvsignore		** NEW **
	* config/Makefile.am		** NEW **
		add config directory

2003-06-09 [christoph]

	* .cvsignore			** NEW **
	* src/.cvsignore		** NEW **
	* src/libgtkgs/.cvsignore	** NEW **
		add cvsignore files

	* configure.ac
	* src/plugin.c
	* src/viewer.c
	* src/viewerprefs.c
	* src/libgtkgs/Makefile.am
        * src/libgtkgs/ggvutils.c
	* src/libgtkgs/gtkgs.c
		don't run the gettext check ourself. It is only
		important of sylpheed was build with gettext support

2003-06-08 [christoph]

	Start of ChangeLog