@@ -22,6 +22,7 @@
 #endif
 #include "config.h"
 
+#include "common/version.h"
 #include "common/plugin.h"
 #include "common/utils.h"
 #include "common/hooks.h"
@@ -30,6 +31,16 @@
 
 gint plugin_init(gchar **error)
 {
+	if ((sylpheed_get_version() > VERSION_NUMERIC)) {
+		*error = g_strdup("Your sylpheed version is newer than the version the plugin was built with");
+		return -1;
+	}
+
+	if ((sylpheed_get_version() < MAKE_NUMERIC_VERSION(0, 9, 4, 1))) {
+		*error = g_strdup("Your sylpheed version is too old");
+		return -1;
+	}
+
 	ghostscript_viewer_prefs_init();
 	ghostscript_viewer_init();
 	return 0;
